[SC-65] refactor : DTO 상속 구조로 변경 및 코드 리펙토링